// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests on <GifExpertApp /> should show a category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <br />
  <ol>
    <GifGrid
      category="Nintendo"
      key="Nintendo"
    />
    <GifGrid
      category="PlayStation"
      key="PlayStation"
    />
  </ol>
</Fragment>
`;

exports[`tests on <GifExpertApp /> should to show component correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <br />
  <ol />
</Fragment>
`;
